# tech-blog

./: .env.example  Makefile  Procfile  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: conftest.py
app/accounts/: admin.py  apps.py  managers.py  tasks.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py
app/accounts/models/: __init__.py  admin.py  customer.py  reset_password.py  users.py
app/accounts/serializers/: accounts.py  forgot_password.py
app/accounts/templates/admin/accounts/customer/: change_form.html
app/accounts/tests/: test_endpoints.py
app/comments/: admin.py  apps.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/comments/migrations/: 0001_initial.py  0002_alter_comment_parent.py
app/comments/tests/: conftest.py  test_endpoints.py
app/common/: active_campaign.py  backends.py  choices.py  fields.py  messages.py  models.py  permissions.py  serializers.py  utils.py
app/contents/: admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  sitemaps.py  tasks.py  urls.py  views.py
app/contents/migrations/: 0001_initial.py  0002_article_cover_article_read_count_and_more.py  0003_video_slug.py  0004_alter_author_photo.py  0005_alter_article_banner.py
app/contents/tests/: conftest.py  test_endpoints.py  test_models.py
app/tests/: test_models.py
config/: asgi.py  celery.py  jazzadmin.py  wsgi.py
config/settings/: base.py  local.py  tests.py
routes/: admin.py  api.py  hosts.py  urls.py
